--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
     <h1 class="btn btn-info heading">Object Detection</h1>
     <br>
     <br>
-<a href="" class="btn">Dog</a>
+<a href="dog_cat.html" class="btn">Dog & Cat</a>
 <br>
 <br>
 <br>
-<a href="" class="btn">Cube</a>
+<a href="cube.html" class="btn">Cube</a>
 <br>
 <br>
 <br>
-<a href="" class="btn">Bedroom</a>
+<a href="bedroom.html" class="btn">Bedroom</a>
 <br>
 <br>
 <br>
-<a href="" class="btn">Living Room</a>
+<a href="living room.html" class="btn">Living Room</a>
 <br>
 <br>
 <br>
-<a href="" class="btn">Kitchen</a>
+<a href="kitchen.html" class="btn">Kitchen</a>
   </center>
 
   <script src="main.js"></script>
